# fair_matcher

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  trading.build
client/: CMakeLists.txt  Makefile  client_session.cpp  client_session.h  trade_client.cpp  trade_client.h
matcher/: CMakeLists.txt  Makefile  market_data_host.cpp  market_data_host.h  market_data_session.cpp  market_data_session.h  match_server.cpp  match_server.h  match_server_context.h  matcher_engine.cpp  matcher_engine.h  orderbook.cpp  orderbook.h  server_session.cpp  server_session.h  test_client.py
matcher/test/: CMakeLists.txt  Makefile  orderbook_input_1.txt  orderbook_input_2.txt  orderbook_test.cpp
shared/: CMakeLists.txt  Makefile
shared/network/: CMakeLists.txt  Makefile  network_host.h  network_session.cpp  network_session.h  network_utils.cpp  network_utils.h
shared/trade_data/: CMakeLists.txt  Makefile  data_types.h  heartbeat.cpp  heartbeat.h  heartbeat_ack.cpp  heartbeat_ack.h  market_data_subscribe.h  message_types.h  messages.h  order.cpp  order.h  proto_wrapper.cpp  proto_wrapper.h  trade.cpp  trade.h
shared/trade_data/proto/: heartbeat.proto  heartbeat_ack.proto  market_data_subscribe.proto  message.proto  order.proto  trade.proto
